GNOME Bugzilla – Bug 617639
SRC URI not resolved when passed to viewer
Last modified: 2010-05-05 16:52:54 UTC
+++ This bug was initially created as a clone of Bug #617066 +++ This stream is divided into two parts,a long one and a minute and a half ending sequence. When I play the stream directly in Totem(open with "Movie Player") it plays the first part but refuses to load the short second part. When I play it in Firefox via the totem plugin it starts playing the second stream after it finishes with the first one. Why doesn't it work when I play it in Totem? link: http://www.ta3.com/sk/relacie/23_hlavne-spravy/9167_hlavne-spravy-z-27-aprila argv[0] url /sk/playlist/relacie/9167 argv[1] src /sk/playlist/relacie/9167 TotemEmbedded-Message: totem_embedded_open_uri: uri /sk/playlist/relacie/9167 base_uri: /sk/playlist/relacie/9167 The URI are relative ones, instead of absolute ones.
commit ae5e1b16592a34f824713d655def63660f45100a Author: Bastien Nocera <hadess@hadess.net> Date: Wed May 5 17:50:52 2010 +0100 Fix URL parameter usage in GMP plugin The URL parameter is never the baseURI, it's the same as the SRC parameter, so some websites use both. Add support for the actual "baseURL" parameter instead. Fixes playback at: http://www.ta3.com/sk/relacie/23_hlavne-spravy/9167_hlavne-spravy-z-27-aprila https://bugzilla.gnome.org/show_bug.cgi?id=617639