Fix URL parameter usage in GMP plugin

The URL parameter is never the baseURI, it's the same as the SRC
parameter, so some websites use both.

Add support for the actual "baseURL" parameter instead.

Fixes playback at:
http://www.ta3.com/sk/relacie/23_hlavne-spravy/9167_hlavne-spravy-z-27-aprila

https://bugzilla.gnome.org/show_bug.cgi?id=617639